space before Big letter

--- a/result1.html
+++ b/result1.html
@@ -48,7 +48,7 @@
        display:flex;
        align-items: center;
        justify-content: center;
-       background-color: green;
+       background-color:  #f2f2f2;
        width: 60%;
        padding: 20px;
    }
@@ -69,19 +69,17 @@
 <div>
 <div class= "formdiv">
   <form >
-        <img src="./images/Erkan.jpg" alt="Erkan">
-
-        <label for="Isim">Isim</label>
-        <input type="text" id="0" name="Isim" placeholder="Isim"> 
+        <label for=" Isim"> Isim</label>
+        <input type="text" id="0" name=" Isim" placeholder=" Isim"> 
         <br/>
-        <label for="Soyism">Soyism</label>
-        <input type="text" id="1" name="Soyism" placeholder="Soyism"> 
+        <label for=" Soyism"> Soyism</label>
+        <input type="text" id="1" name=" Soyism" placeholder=" Soyism"> 
         <br/>
-        <label for="Email">Email</label>
-        <input type="text" id="2" name="Email" placeholder="Email"> 
+        <label for=" Yas"> Yas</label>
+        <input type="text" id="2" name=" Yas" placeholder=" Yas"> 
         <br/>
-        <label for="Sifre">Sifre</label>
-        <input type="text" id="3" name="Sifre" placeholder="Sifre"> 
+        <label for=" Forma No"> Forma No</label>
+        <input type="text" id="3" name=" Forma No" placeholder=" Forma No"> 
         <br/>        <input id="submit" type="submit" value="Gonder">
    </form>
 </div>
