--- a/result2.html
+++ b/result2.html
@@ -40,7 +40,7 @@
        border-radius: 20px;
        padding: 40px;
        box-sizing: border-box;
-       background: green;
+       background:  #f2f2f2;
        box-shadow: 14px 14px 20px #cbced1, -14px -14px 20px white;
    }
 
@@ -101,19 +101,17 @@
 
 <div class="container">
   <div class="inputs">
-        <img src="./images/Erkan.jpg" alt="Erkan">
-
-        <label for="Isim">Isim</label>
-        <input type="text" id="0" name="Isim" placeholder="Isim"> 
+        <label for=" Isim"> Isim</label>
+        <input type="text" id="0" name=" Isim" placeholder=" Isim"> 
         <br/>
-        <label for="Soyism">Soyism</label>
-        <input type="text" id="1" name="Soyism" placeholder="Soyism"> 
+        <label for=" Soyism"> Soyism</label>
+        <input type="text" id="1" name=" Soyism" placeholder=" Soyism"> 
         <br/>
-        <label for="Email">Email</label>
-        <input type="text" id="2" name="Email" placeholder="Email"> 
+        <label for=" Yas"> Yas</label>
+        <input type="text" id="2" name=" Yas" placeholder=" Yas"> 
         <br/>
-        <label for="Sifre">Sifre</label>
-        <input type="text" id="3" name="Sifre" placeholder="Sifre"> 
+        <label for=" Forma No"> Forma No</label>
+        <input type="text" id="3" name=" Forma No" placeholder=" Forma No"> 
         <br/>        <button id="submit" type="submit">Gonder</button>
    </div>
 </div>
