--- a/result.html
+++ b/result.html
@@ -34,7 +34,7 @@ input[type=submit]:hover {
 
 div {
   border-radius: 5px;
-  background-color: green;
+  background-color:  #f2f2f2;
   padding: 20px;
 }
 </style>
@@ -43,16 +43,14 @@ div {
 
 <div>
   <form >
-        <img src="./images/Erkan.jpg" alt="Erkan">
-
-<label for="Isim">Isim</label>
-<input type="text" id="0" name="Isim" placeholder="Isim">
-<label for="Soyism">Soyism</label>
-<input type="text" id="1" name="Soyism" placeholder="Soyism">
-<label for="Email">Email</label>
-<input type="text" id="2" name="Email" placeholder="Email">
-<label for="Sifre">Sifre</label>
-<input type="text" id="3" name="Sifre" placeholder="Sifre"><input id="submit" type="submit" value="Gonder">
+<label for=" Isim"> Isim</label>
+<input type="text" id="0" name=" Isim" placeholder=" Isim">
+<label for=" Soyism"> Soyism</label>
+<input type="text" id="1" name=" Soyism" placeholder=" Soyism">
+<label for=" Yas"> Yas</label>
+<input type="text" id="2" name=" Yas" placeholder=" Yas">
+<label for=" Forma No"> Forma No</label>
+<input type="text" id="3" name=" Forma No" placeholder=" Forma No"><input id="submit" type="submit" value="Gonder">
   </form>
 </div>
 
