--- a/result.html
+++ b/result.html
@@ -48,9 +48,7 @@ div {
 <label for=" Soyism"> Soyism</label>
 <input type="text" id="1" name=" Soyism" placeholder=" Soyism">
 <label for=" Yas"> Yas</label>
-<input type="text" id="2" name=" Yas" placeholder=" Yas">
-<label for=" Forma No"> Forma No</label>
-<input type="text" id="3" name=" Forma No" placeholder=" Forma No"><input id="submit" type="submit" value="Gonder">
+<input type="text" id="2" name=" Yas" placeholder=" Yas"><input id="submit" type="submit" value="Gonder">
   </form>
 </div>
 
