--- a/result2.html
+++ b/result2.html
@@ -114,4 +114,6 @@
 </div>
 
 </body>
-<script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.2/dist/FileSaver.min.js"></script><script src="./main.js"></script></html>
+<script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.2/dist/FileSaver.min.js"></script>
+<script src="./main.js"></script>
+</html>
